# snake-reinforcement

./: .gitignore  README.md  pyproject.toml  snake.html  snake.js
modeling/: config.yaml  export_onnx.py  pyproject.toml  snake_env.py  train.py
modeling/models/: snake_model.onnx
webapp/: .gitignore  index.html  package-lock.json  package.json
webapp/src/: App.css  App.tsx  SnakeGame.ts  index.css
