[project]
name = "modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.3",
    "onnx>=1.21.0",
    "onnxscript>=0.7.0",
    "shimmy>=2.0.1",
    "stable-baselines3>=2.8.0",
    "torch>=2.11.0",
    "PyYAML>=6.0.1",
    "pytest>=8.0.0",
    "mlflow>=2.10.0",
]
